--- a/store/templates/compare.html
+++ b/store/templates/compare.html
@@ -30,7 +30,7 @@
                         <div class="table-responsive">
                             <table class="table table-bordered text-center">
                                 <tbody>
-                                {% for product in products %}
+                                {% for product in pros %}
                                 <tr class="pr_image">
                                     <td class="row_title">Product Image</td>
                                     <td class="row_img"><img
